# Zenith

./: .gitignore  DESIGN_UPDATE_SUMMARY.md  Gösterge.html  IMPLEMENTATION_SUMMARY.md  OyunEkle.html  OyunListesi.html  Oyunu Düzenle - Zenith.html  ROADMAP.md  Slider.html  Zenith.rar  client_demo_ui.html  client_dynamic.html  client_dynamic_fixed.html  client_start.bat  cookies.txt  copy_templates.py  create_test_saves.py  drop.html  final_disk_page.html  gorsel.html  gradient-showcase (1).html  kafe.db  modern_license_panel (7).html  new_cookies.txt  oyunekle.html  oyunekle_complete.html  oyunlistesi.html  server_start.bat  test_save_system.py  zenka_gradients.css
Oyunu Düzenle - Zenith_files/: admin_theme_v2.css
client/: README.md  TAURI_SETUP.md  main.js  package-lock.json  package.json
demo/: demotasarim.css  index.html
electron-app/: KURULUM.md  README.md  loading.html  main.js  package-lock.json  package.json  preload.js  start.bat
panel/: IMPLEMENTATION_SUMMARY.md  README.md  README_CUSTOMER_AUTH.md  add_customer.php  add_dealer.php  add_payment.php  admin_auth_api.php  admin_sessions_table.sql  api.php  complete_database_schema.sql  config.php  customer_dashboard.php  customer_login.php  customer_logout.php  customers.php  database_update.sql  dealers.php  delete_license.php  edit_customer.php  edit_license.php  final_install.sql  fix_database.sql  footer.php  get_customer_licenses.php  hash.php  (+10 more)
tauri-app/src-tauri/: Cargo.toml  tauri.admin.conf.json  tauri.client.conf.json  tauri.combined.conf.json  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
(+68 files in other folders)
