[package]
name = "zenith-cafe-manager"
version = "1.0.0"
description = "Zenith Internet Cafe Manager - Yeni Nesil Oyun Menüsü"
authors = ["Zenith Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = "2.3"
tauri-plugin-shell = "2.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
anyhow = "1.0"
